--- a/come to the hub.css
+++ b/come to the hub.css
@@ -62,3 +62,52 @@
   top:0 ;
   font: size 5px;
 }
+.img{
+  width: 30vw;
+  display: box;
+  float: left;
+  height:100vh;
+  margin: left 0; ;
+}
+.logo{
+  width: 40vh;
+  float:Right;
+  margin-right:26vw;
+}
+table, th, td{
+  border: 1px solid black;
+  font-family:Work sans;
+  width:50vw;
+ 
+}
+tr:hover{
+  background-color:#DFBD69;
+}
+th{
+  background-color: #611CA9;
+  color: white;
+  font-family: Work sans;
+}
+
+table{
+  float: right;
+  text-align: center;
+  margin:4.5%;
+  position: absolute;
+  height:30%;
+  margin-top: 15vh;
+  margin-left: 10vw;
+}
+.style{
+  overflow: auto;
+}
+.text{
+  position: absolute;
+  text-align: justify;
+  margin-left:10vw ;
+  margin-right:5% ;
+  font-family: work sans;
+  max-width: 40vw;
+  float: right;
+  bottom: 35vh;
+}
