added and styled the footer

--- a/come to the hub.css
+++ b/come to the hub.css
@@ -111,3 +111,13 @@ table{
   float: right;
   bottom: 35vh;
 }
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#DFBD69;
+  color: #000000;
+  text-align: left;
+  font-family:Rowdies;
+}
