I have added a z index to the flip cards and videos, this has solved all the control issues

--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -89,10 +89,14 @@
 .bckgrnd{
   background-color: #D4B464;
 }
+.video{
+z-index: 7;
+}
 /* Styles the right column of the flip cards*/
 .right{
   position: relative;
   top: -130vh;
+  z-index: -4;
 }
 /* The flip card container for Hip-Hop*/
 .Hip-hop{
@@ -223,7 +227,8 @@
   float: left;
   margin-left: 46vw;
   position: relative;
-  top: -250vh;
+  top: -280vh;
+  z-index: -4;
 }
 /* The flip card container for basketball*/
 .basketball{
