--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -93,7 +93,9 @@
 /* Styles the right column of the flip cards*/
 .right{
   position: relative;
-  top: -130vh;
+  top: 10vh;
+  float: right;
+  margin-right: 20vw;
 }
 /* The flip card container for Hip-Hop*/
 .Hip-hop{
@@ -222,9 +224,9 @@
 /* Styles the left column of cards */
 .left{
   float: left;
-  margin-left: 46vw;
+  margin-left: 25vw;
   position: relative;
-  top: -280vh;
+  top: 7vh;
   
 }
 /* The flip card container for basketball*/
