--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -354,8 +354,8 @@
   transform: rotateY(180deg);
   font-family: 'work sans';
 }
-/* Styles the cards on screens 2000px and less */
-@media screen and (max-width: 2000px){
+/* Styles the cards on screens 1500px and less */
+@media screen and (max-width: 1500px){
   .left{
     float: left;
     margin-left: 5vw;
@@ -369,143 +369,162 @@
     top: 10vh;
     float: right;
     padding-left: 300px;
-    
-
   }
   .pictures{
     z-index: -7;
     display: none;
   }
 }
-/* Styles the cards on screens 1500px and less */
-@media screen and (max-width: 1150px){
+/* Styles the cards on screens 1200px and less */
+@media screen and (max-width: 1200px){
   .left{
     float: left;
-    margin-left: 5vw;
+    margin-left: 0;
     position: relative;
     top: 7vh;
-    padding-left: 288px;
-    padding-right: 288px;
+    padding-left: 17%;
+    padding-right: 15%;
   }
   .right{
     position: relative;
     top: 10vh;
     float: right;
-    padding-left: 288px;
-    padding-right: 288px;
+    padding-left: 33%;
+    padding-right: 15%;
+    margin-right: 0;
+  }
+  .pictures{
+    z-index: -7;
+    display: none;
+  }
+}
+/* Hides the flip cards on screens 1100px and less */
+@media screen and (max-width: 1100px){
+  .left{
+    display: none;
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 1100px and less */
+   .pictures{
+    display: block;
+    padding-left: 20vw;
+    padding-right: 12vw;
+    align-items: center;
+   }
+}
+/* Hides the flip cards on screens 950px and less */
+@media screen and (max-width: 950px){
+  .left{
+    display: none;
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 950px and less */
+   .pictures{
+    display: block;
+    padding-left: 15vw;
+    padding-right: 12vw;
+    align-items: center;
+   }
 
-  }
-  .pictures{
-    z-index: -7;
-    display: none;
-  }
-}
-/* Styles the cards on screens 800px and less */
-@media screen and (max-width: 800px){
+/* Hides the flip cards on screens 890px and less */
+@media screen and (max-width: 890px){
   .left{
-    margin-left: 35vw;
-    position: relative;
-    top: 7vh;
-    padding-left: 200px;
-    padding-right: 200px;
-  }
-  .right{
-    position: relative;
-    top: 180vh;
-    padding-left: 200px;
-    padding-right: 200px;
-  }
-  .pictures{
-    z-index: -7;
     display: none;
-  }
-}
-/* Styles the cards on screens 700px and less */
-@media screen and (max-width: 700px){
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 890px and less */
+   .pictures{
+    display: block;
+    padding-left: 14%;
+    padding-right: 8%;
+    align-items: center;
+   }
+/* Hides the flip cards on screens 820px and less */
+@media screen and (max-width: 820px){
   .left{
-    margin-left: 35vw;
-    position: relative;
-    top: 7vh;
-    padding-left: 175px;
-    padding-right: 175px;
-  }
-  .right{
-    position:relative;
-    top: 180vh;
-    padding-left: 175px;
-    padding-right: 175px;
-  }
-  .pictures{
-    z-index: -7;
     display: none;
-  }
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 820px and less */
+   .pictures{
+    display: block;
+    padding-left: 30%;
+    padding-right: 8%;
+    align-items: center;
+   }
 }
-/* Styles the cards on screens 600px and less */
+/* Hides the flip cards on screens 720px and less */
+@media screen and (max-width: 720px){
+  .left{
+    display: none;
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 720px and less */
+   .pictures{
+    display: block;
+    padding-left: 25%;
+    padding-right: 8%;
+    align-items: center;
+   }
+}
+/* Hides the flip cards on screens 600px and less */
 @media screen and (max-width: 600px){
   .left{
-   display: none;
-  }
-  .right{
     display: none;
-  }
-  .pictures{
-   display: block;
-   padding-left: 150px;
-   padding-right: 150px;
-   align-items: center;
-   z-index: 7;
-    
-
-  }
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 600px and less */
+   .pictures{
+    display: block;
+    padding-left: 20%;
+    padding-right: 8%;
+    align-items: center;
+   }
 }
-/* Styles the cards on screens 500px and less */
+/* Hides the flip cards on screens 500px and less */
 @media screen and (max-width: 500px){
   .left{
-   display: none;
-  }
-  .right{
     display: none;
-  }
-  .pictures{
-   display: block;
-   padding-left: 125px;
-   padding-right: 125px;
-   align-items: center;
-   z-index: 7;
-  }
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 500px and less */
+   .pictures{
+    display: block;
+    padding-left: 15%;
+    padding-right: 8%;
+    align-items: center;
+   }
 }
-/* Styles the cards on screens 400px and less */
-@media screen and (max-width: 400px){
+/* Hides the flip cards on screens 450px and less */
+@media screen and (max-width: 450px){
   .left{
-   display: none;
-  }
-  .right{
     display: none;
-  }
-  .pictures{
-   display: block;
-   padding-left: 100px;
-   padding-right: 100px;
-   z-index: 7;
+   }
+   .right{
+     display: none;
+   }
+/* Shows the pictures on screens 450px and less */
+   .pictures{
+    display: block;
+    padding-left: 10%;
+    padding-right: 6%;
+    align-items: center;
   }
 }
-/* Styles the cards on screens 300px and less */
-@media screen and (max-width: 300px){
-  .left{
-   display: none;
-  }
-  .right{
-    display: none;
-  }
-  .pictures{
-   display: block;
-   padding-left: 75px;
-   padding-right: 75px;
-   z-index: 7;
-  }
-}
-
-
 /* Styles the footer*/
 .footer{
   position: fixed;
