--- a/style.css
+++ b/style.css
@@ -75,8 +75,7 @@
   width: 100vw;
   height: 100vh;
   object-fit: cover;
-  position: absolute;
-  top: 400px;
+  position: top;
   left: 0;
   right: 0;
   top: 0;
