I added padding to the text on the streetwears evolution page so the text does not stretch too far acroos the screen

--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -81,9 +81,10 @@
 /* styles body text */
 .WorkSans{
   font-family:Work Sans;
-  margin-left: 20px;
-  margin-right: 20px;
-  max-width: 90%;
+}
+.text{
+  padding-left: 15vw;
+  padding-right: 15vw;
 }
 /* sets background colour to gold */
 .bckgrnd{
