I changed the colour of the visited links to gold.

--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -95,7 +95,7 @@
 
   /* Changes the  colour of visited links to gold as the defult colour was too similar to the flip clards */
 a.links:visited {
-  color: #DFBD69;
+  color: #af9554;
   background-color: transparent;
   text-decoration: none;
 }
