--- a/Exclusives.css
+++ b/Exclusives.css
@@ -143,6 +143,7 @@ body {
       font-size: 80%;
    }
 }
+/* Styles the text on screens 500px and less*/
 @media only screen and (max-width: 550px) {
    .Logo{
       width: 60%;
@@ -158,15 +159,17 @@ body {
       margin-left:15vw;
    }
 }
+/* Styles the footer */
 .footer{
    position: fixed;
    left: 0;
    bottom: 0;
    width: 100%;
-   background-color:#DFBD69;
-   color: #000000;
+   background-color:#000000 ;
+   color: #DFBD69;
    text-align: left;
    font-family:Rowdies;
    padding: 0.5%;;
+   opacity: 0.7;
 }
  
