--- a/Streetwear's evolution.css
+++ b/Streetwear's evolution.css
@@ -419,18 +419,7 @@ a.links:hover {
     display: none;
   }
 }
-/* Styles the footer*/
-.footer{
-  position: fixed;
-  left: 0;
-  bottom: 0;
-  width: 100%;
-  background-color:#DFBD69;
-  color: #000000;
-  text-align: left;
-  font-family:Rowdies;
-  padding: 0.5%;
-} 
+
 /* Hides the flip cards on screens 1100px and less */
 @media screen and (max-width: 1100px){
   .left{
@@ -462,7 +451,7 @@ a.links:hover {
     padding-right: 12vw;
     align-items: center;
    }
-
+}
 /* Hides the flip cards on screens 890px and less */
 @media screen and (max-width: 890px){
   .left{
@@ -478,6 +467,7 @@ a.links:hover {
     padding-right: 8%;
     align-items: center;
    }
+}
 /* Hides the flip cards on screens 820px and less */
 @media screen and (max-width: 820px){
   .left{
@@ -557,3 +547,17 @@ a.links:hover {
     padding-right: 6%;
     align-items: center;
   }
+}
+/* Styles the footer*/
+.footer{
+  position: fixed;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  background-color:#000000;
+  color: #DFBD69;
+  text-align: left;
+  font-family:Rowdies;
+  padding: 0.5%;
+  opacity: 0.7;
+} 
