--- a/about us.css
+++ b/about us.css
@@ -180,8 +180,9 @@
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color:#DFBD69;
-  color: #000000;
+  background-color:#000000;
+  color: #DFBD69;
   text-align: left;
   padding: 0.5%;;
+  opacity: 0.7;
 }
