--- a/come to the hub.css
+++ b/come to the hub.css
@@ -241,9 +241,10 @@ table{
   left: 0;
   bottom: 0;
   width: 100%;
-  background-color:#DFBD69;
-  color: #000000;
+  background-color:#000000;
+  color: #DFBD69;
   text-align: left;
   font-family:Rowdies;
   padding: 0.5%;;
+  opacity: 0.7;
 }
