--- a/Style/about us.css
+++ b/Style/about us.css
@@ -47,6 +47,23 @@
   background-color: #611CA9;
   color: #DFBD69;
 }
+  /* Changes the  colour of visited links to gold so it is visible against the background */
+  a.links {
+    color: #611CA9;
+  }
+  
+    /* Changes the  colour of visited links to gold so it is visible against the background */
+  a.links:visited {
+    color: #af9554;
+    background-color: transparent;
+    text-decoration: none;
+  }
+  /* Changes the  colour of links to blue on hover to increase contrast */
+  a.links:hover {
+    color: #1C1EA9;
+    background-color: transparent;
+    text-decoration: underline;
+  }
 /* Will automatically display the navbar vertically instead of horizontally on screens less than 600 pixels making webpage responsive */
 @media screen and (max-width: 600px){
 /* Sets navbar position */
