--- a/Style/Streetwear's evolution.css
+++ b/Style/Streetwear's evolution.css
@@ -92,20 +92,20 @@
   background-color: #D4B464;
   z-index: 0;
 }
-  /* Changes the  colour of visited links to gold so it is visible against the background */
+  /* Changes the  colour of links to purple so it is visible against the background */
 a.links {
   color: #611CA9;
 }
 
-  /* Changes the  colour of visited links to gold so it is visible against the background */
+  /* Changes the  colour of visited links to a blue so it is visible against the background */
 a.links:visited {
-  color: #af9554;
+  color: #1C1EA9;
   background-color: transparent;
   text-decoration: none;
 }
-/* Changes the  colour of links to blue on hover to increase contrast */
+/* Changes the  colour of links to light blue on hover to increase contrast */
 a.links:hover {
-  color: #1C1EA9;
+  color: #05e9dd;
   background-color: transparent;
   text-decoration: underline;
 }
