--- a/Style/about us.css
+++ b/Style/about us.css
@@ -51,15 +51,15 @@
   a.links {
     color: #611CA9;
   }
-    /* Changes the  colour of visited links to a darker gold so it is visible against the background */
+    /* Changes the  colour of visited links to a blue so it is visible against the background */
   a.links:visited {
-    color: #916d13;
+    color: #1C1EA9;
     background-color: transparent;
     text-decoration: none;
   }
-  /* Changes the  colour of links to blue on hover to increase contrast */
+  /* Changes the  colour of links to light blue on hover to increase contrast */
   a.links:hover {
-    color: #1C1EA9;
+    color: #05e9dd;
     background-color: transparent;
     text-decoration: underline;
   }
