I have changed the navbar text to white on all the pages

--- a/Style/Exclusives.css
+++ b/Style/Exclusives.css
@@ -10,32 +10,23 @@
    color: #611CA9;
    width: 100%;
 }
- 
-/* Styles the social media icons in the header bar */
-.landing-page-header a {
-   color: #611CA9;
+/* Adds a black background to the navigation bar */
+.landing-page-menu{
+   background-color: #000000;
+   overflow: hidden;
+   font-family: 'Rowdies', cursive;
+   color: #ffffff;
+   width: 100%;
+ }
+ /* Styles the links inside the navigation bar */
+ .landing-page-menu a{
+   float: left;
+   color: #ffffff;
    text-align: center;
    padding: 14px 16px;
    text-decoration: none;
    font-size: 17px;
-}
-/* Styles the navigation bar */
-.landing-page-menu {
-   background-color: #000000;
-   overflow: hidden;
-   font-family: 'Rowdies', cursive;
-   color: #611CA9;
-   width: 100%;
-}
-/* Styles the links inside the navigation bar */
-.landing-page-menu a {
-   float: left;
-   color: #611CA9;
-   text-align: center;
-   padding: 10px 16px;
-   text-decoration: none;
-   font-size: 17px;
-}
+ }
 /* Changes the link to purple on hover */
 .landing-page-menu a:hover {
    background-color: #611CA9;
