corrected the remaining erorrs on the come to the hub page

--- a/Style/come-to-the-hub.css
+++ b/Style/come-to-the-hub.css
@@ -51,10 +51,10 @@
 /* Styles the image */
 .img{
   width: 30vw;
-  display: box;
+  display: block;
   float: left;
   height:100vh;
-  margin: left 0; ;
+  margin-left:0;
 }
 /* Styles the logo */
 .logo{
