--- a/Style/about-us.css
+++ b/Style/about-us.css
@@ -74,7 +74,7 @@
 }
 /* sets left-half of the background to a picture */
 .background{
-  background-image: url("Man.png");
+  background-image: url("/Media/Man.png");
   width: 55%;
   height: 100vh;
   background-repeat: no-repeat;
